// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copy Dataset Member Failure scenarios cannot replace a member without --replace flag 1`] = `
"================Z/OS FILES COPY DATA SET===============
"
`;

exports[`Copy Dataset Member Success scenarios copy a single member 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy a single member and replace existing member 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy all members 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy with alias = true 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy with enqueue = SHRW 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy with from and to volume specified 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;
